# MyDraw

./: CMakeLists.txt  README.md  color.h  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h  test.cpp  vertexData.cpp  vertexData.h  window.cpp
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
